feat: support metric name filtering in OpenTelemetry exporter (#2344)
Closes the last pending high-priority item in
https://github.com/prometheus/client_java/issues/1816 (as all others
have already been addressed).

Currently, `PrometheusMetricProducer` always exported all metrics in the
registry unconditionally. The code already had a TODO sketching how
filtering could be added:

https://github.com/prometheus/client_java/blob/9432fdc1933611d34d944d4640ebca3bf91f8ee4/prometheus-metrics-exporter-opentelemetry/src/main/java/io/prometheus/metrics/exporter/opentelemetry/PrometheusMetricProducer.java#L47-L54

this PR implements that by reusing `ExporterFilterProperties` and
`MetricNameFilter`, as already done by `PrometheusScrapeHandler`.

As a result, the OpenTelemetry exporter now honors the shared
`io.prometheus.exporter.filter.*` configuration, making its behavior
consistent with the HTTP/Servlet exporters.

---------

Signed-off-by: subhramit <subhramit.bb@live.in>